[package]
name = "testonomicon"
version = "0.1.0"
authors = ["deveusss <deveusss@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Fluent test assertions"
repository = "https://github.com/deveusss/testonomicon"
readme = "README.md"
keywords = ["fluentassertions","fluent", "testing", "assert", "assertions"]

[features]
default = ["num"]

[dependencies]
num = { version = "0.4.0", optional = true }

