[package]
name = "testonomicon-near"
version = "0.1.0"
edition = "2018"

[dependencies]
near-account-id="0.11.0"
anyhow = "1.0"
borsh = "0.9"
maplit = "1.0"
near-units = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tokio = { version = "1.10.0", features = ["full"] }
workspaces="0.1.0"
futures = "0.3"
